--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
+    "@ant-design/icons": "^5.3.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
@@ -15,10 +15,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-minimal-side-navigation": "^1.9.2",
+    "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
-    "sass": "^1.74.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.75.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/haley10309/Multi_main_Project.git",
+  "author": "sujin121 <164309926+sujin121@users.noreply.github.com>",
+  "license": "MIT"
 }
