--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
