--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
   "main": "index.js",
   "repository": "https://github.com/haley10309/Multi_main_Project.git",
   "author": "sujin121 <164309926+sujin121@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  }
 }
