--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.0.0",
-    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
@@ -15,11 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-minimal-side-navigation": "^1.9.2",
     "react-modal": "^3.16.1",
-    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.75.0",
