--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-package-lock.json
-yarn.lock
+# package-lock.json
+# yarn.lock
 # macOS 시스템 파일 무시
